<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".ColorPicker">
    <TextView
        android:id="@+id/exampleTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/ExampleText"
        android:gravity="center"
        android:autoSizeTextType="uniform"
        android:layout_marginBottom="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.5"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginEnd="5dp"
            tools:ignore="NestedWeights">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:text="@string/background"
                android:gravity="center"
                android:autoSizeTextType="uniform"
                android:lines="1"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="@string/red"
                    android:gravity="center|left"
                    android:autoSizeTextType="uniform"
                    android:lines="1"
                    tools:ignore="RtlHardcoded" />
                <TextView
                    android:id="@+id/backRVal"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center|right"
                    android:autoSizeTextType="uniform"
                    android:lines="1"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>
            <SeekBar
                android:id="@+id/backRIn"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.7" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="@string/green"
                    android:gravity="center|left"
                    android:autoSizeTextType="uniform"
                    android:lines="1"
                    tools:ignore="RtlHardcoded" />
                <TextView
                    android:id="@+id/backGVal"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center|right"
                    android:autoSizeTextType="uniform"
                    android:lines="1"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>
            <SeekBar
                android:id="@+id/backGIn"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.7" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="@string/blue"
                    android:gravity="center|left"
                    android:autoSizeTextType="uniform"
                    android:lines="1"
                    tools:ignore="RtlHardcoded" />
                <TextView
                    android:id="@+id/backBVal"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center|right"
                    android:autoSizeTextType="uniform"
                    android:lines="1"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>
            <SeekBar
                android:id="@+id/backBIn"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.7" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="5dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:text="@string/font"
                android:gravity="center"
                android:autoSizeTextType="uniform"
                android:lines="1"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="@string/red"
                    android:gravity="center|left"
                    android:autoSizeTextType="uniform"
                    android:lines="1"
                    tools:ignore="NestedWeights,RtlHardcoded" />
                <TextView
                    android:id="@+id/fontRVal"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center|right"
                    android:autoSizeTextType="uniform"
                    android:lines="1"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>
            <SeekBar
                android:id="@+id/fontRIn"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.7" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="@string/green"
                    android:gravity="center|left"
                    android:autoSizeTextType="uniform"
                    android:lines="1"
                    tools:ignore="NestedWeights,RtlHardcoded" />
                <TextView
                    android:id="@+id/fontGVal"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center|right"
                    android:autoSizeTextType="uniform"
                    android:lines="1"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>
            <SeekBar
                android:id="@+id/fontGIn"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.7" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="@string/blue"
                    android:gravity="center|left"
                    android:autoSizeTextType="uniform"
                    android:lines="1"
                    tools:ignore="NestedWeights,RtlHardcoded" />
                <TextView
                    android:id="@+id/fontBVal"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center|right"
                    android:autoSizeTextType="uniform"
                    android:lines="1"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>
            <SeekBar
                android:id="@+id/fontBIn"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.7" />
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/saveColorsBtn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:text="@string/save"
        android:autoSizeTextType="uniform"/>
</LinearLayout>